k8s/namespaced.yaml
# kubectl create namespace crecentric-flask-app --dry-run=client -o yaml | kubectl apply -f -
# kubectl delete secret flask-web-app-secret -n crecentric-flask-app -n crecentric-flask-app
# kubectl delete secret flask-web-app-secret -n crecentric-flask-app
# kubectl delete sts flask-web-app-test-sts -n crecentric-flask-app
# kubectl delete pvc flask-web-app-test-pvc --wait=false -n crecentric-flask-app
# kubectl create secret generic flask-web-app-secret --from-literal=APP_LOG_DIR=/var/log/flask --from-literal=FLASK_DEBUG=True --from-literal=FLASK_ENV=development -n crecentric-flask-app
# kubectl create secret generic flask-web-app-secret --from-literal=APP_LOG_DIR=/var/log/flask --from-literal=FLASK_DEBUG=True --from-literal=FLASK_ENV=development

apiVersion: v1
kind: Namespace
metadata:
  name: crecentric-flask-app
---
apiVersion: v1
kind: Service
metadata:
  namespace: crecentric-flask-app
  labels:
    identifier: flask-web-app-test-svc
  name: flask-web-app-test-svc
spec:
  type: ClusterIP
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: flask-web-app-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: crecentric-flask-app
  labels:
    identifier: flask-web-app-test-sts
  name: flask-web-app-test-sts
spec:
  serviceName: flask-web-app-test-svc
  replicas: 3
  selector:
    matchLabels:
      app: flask-web-app-test
  template:
    metadata:
      labels:
        app: flask-web-app-test
        identifier: flask-web-app-test-sts
        # identifier: flask-web-app-test
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - flask-web-app-test
              topologyKey: "kubernetes.io/hostname"
      containers:
        - image: crecentric/flask
          name: flask-k8s-web-app-container
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /var/log/flask
              name: flask-web-app-test-volume
              subPath: logs
      restartPolicy: Always
      volumes:
        - name: flask-web-app-test-volume
          persistentVolumeClaim:
            claimName: flask-web-app-test-pvc
