k8s/flask-k8s.yaml
# kubectl create namespace crecentric-flask-app --dry-run=client -o yaml | kubectl apply -f -
# kubectl delete secret flask-web-app-secret -n crecentric-flask-app -n crecentric-flask-app
# kubectl delete secret flask-web-app-secret -n crecentric-flask-app
# kubectl delete sts flask-web-app-sts -n crecentric-flask-app
# kubectl delete pvc flask-web-app-pvc --wait=false -n crecentric-flask-app
# kubectl create secret generic flask-web-app-secret --from-literal=APP_LOG_DIR=/var/log/flask --from-literal=FLASK_DEBUG=True --from-literal=FLASK_ENV=development -n crecentric-flask-app
# kubectl create secret generic flask-web-app-secret --from-literal=APP_LOG_DIR=/var/log/flask --from-literal=FLASK_DEBUG=True --from-literal=FLASK_ENV=development
# sudo vim /etc/hosts
# minikube ip
# 192.168.49.2	crecentric-flask.info

---
apiVersion: v1
kind: Namespace
metadata:
  name: crecentric-flask-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crecentric-flask-ingress
  namespace: crecentric-flask-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: crecentric-flask.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-web-app-svc
                port:
                  number: 5000

---
apiVersion: v1
kind: Service
metadata:
  namespace: crecentric-flask-app
  labels:
    identifier: flask-web-app-svc
  name: flask-web-app-svc
spec:
  type: ClusterIP # provides internal routing
  # type: LoadBalancer # provides external routing
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
      # nodePort: 30000
  selector:
    app: flask-web-app

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: crecentric-flask-app
  labels:
    identifier: flask-web-app-sts
  name: flask-web-app-sts
spec:
  serviceName: flask-web-app-svc
  replicas: 3
  selector:
    matchLabels:
      app: flask-web-app
  template:
    metadata:
      labels:
        app: flask-web-app
        identifier: flask-web-app-sts
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - flask-web-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - image: crecentric/flask
          name: flask-k8s-web-app-container
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - name: flask-web-app-volume
              mountPath: /var/log/flask
              subPath: logs
      restartPolicy: Always
      volumes:
        - name: flask-web-app-volume
          persistentVolumeClaim:
            claimName: flask-web-app-pvc
